# ai_secretary

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_p5_demo.py  test_play.py
.serena/: project.yml
config/: app_config.yaml  system_prompt.txt
doc/: CHANGELOG_20251017_0215.md  CHANGELOG_20251017_COEIROINK実装.md  COEIROINK_CLIENT_OVERVIEW.md  COEIROINK_PARAMETER_RESEARCH.md  COEIROINK_RESEARCH.md  WSL2_AUDIO_SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lifelog-system/: .gitignore  README.md  pyproject.toml  run.sh
lifelog-system/config/: config.yaml  privacy.yaml
lifelog-system/docs/: QUICKSTART.md
lifelog-system/scripts/: daemon.sh
lifelog-system/src/: __init__.py  cli_viewer.py  main_collector.py
lifelog-system/src/collectors/: __init__.py  activity_collector.py  foreground_tracker.py  health_monitor.py  idle_detector.py
lifelog-system/src/database/: __init__.py  db_manager.py  schema.py
lifelog-system/src/utils/: __init__.py  config.py  privacy.py
lifelog-system/tests/: __init__.py  test_collectors.py  test_database.py  test_integration.py
plan/: P10_PROACTIVE_CONVERSATION_PLAN.md  P2_DAILY_LOG_PLAN_v2.md  P3_CHAT_HISTORY_PLAN.md  P4_P8_P9_design.md  P6_BROWSER_HISTORY_PLAN.md  P7_INFO_COLLECTOR_PLAN.md  TODO.md
samples/: generate_test_wav.py
scripts/: cui_chat.py  dev_server.py  download_transcript.py  ensure-uv-same-fs.sh  test_cui_chat.sh
src/: audio_player.py  coeiroink_client.py
tests/: README_INTEGRATION_TESTS.md  test_ai_secretary_bash.py  test_ai_secretary_bash_executor_init.py  test_ai_secretary_bash_integration.py  test_ai_secretary_summary.py  test_todo_api.py  (+24 more)
(+125 files in other folders)
