[project]
name = "ai-secretary"
version = "0.1.0"
description = "Ollamaを活用したローカルAI秘書システム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
